# extralife

./: .gitignore  .gitmodules  Cargo.toml  README.md  consoles.csv  package.json  pnpm-lock.yaml
.cargo/: config.toml
.cursor/rules/: core-contract.mdc  license-policy.mdc  loop-playbook.mdc
.cursor/skills/browser-smoke-test/: SKILL.md
.github/workflows/: ci.yml
crates/extralife-chip8/: Cargo.toml
crates/extralife-chip8/src/: lib.rs  tests.rs  wasm.rs
crates/extralife-chip8/tests/: golden.rs
crates/extralife-core/: Cargo.toml
crates/extralife-core/src/: lib.rs
crates/extralife-gameboy/: Cargo.toml
crates/extralife-gameboy/src/: apu.rs  cartridge.rs  cpu.rs  joypad.rs  lib.rs  mmu.rs  ppu.rs  tests.rs  timer.rs  wasm.rs
crates/extralife-gameboy/src/cpu/: alu.rs  exec.rs
crates/extralife-gameboy/tests/: blargg.rs  golden.rs  golden_audio.rs  pokemon_repro.rs  sm83.rs  sound.rs
crates/extralife-nes/: Cargo.toml
crates/extralife-nes/src/: apu.rs  cartridge.rs  cpu.rs  lib.rs  ppu.rs  system.rs  tests.rs  wasm.rs
crates/extralife-nes/src/cpu/: exec.rs
crates/extralife-nes/src/cpu/exec/: illegal.rs
crates/extralife-nes/src/ppu/: render.rs
crates/extralife-nes/tests/: blargg.rs  golden.rs  input.rs  nes6502.rs  nestest.rs
crates/extralife-tamagotchi/: Cargo.toml
crates/extralife-tamagotchi/src/: cpu.rs  lib.rs  system.rs  tests.rs  wasm.rs
crates/extralife-tamagotchi/tests/: golden.rs
scripts/: setup-submodules.sh
tests/: README.md
tests/golden/gameboy/: apu-01-registers.f32
