[package]
name = "extralife-chip8"
description = "CHIP-8 core for extralife (pipeline proof)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
# rlib for native tests + downstream Rust; cdylib for the wasm-pack build.
crate-type = ["cdylib", "rlib"]

[dependencies]
extralife-core.workspace = true
wasm-bindgen = "0.2"
