[package]
name = "extralife-tamagotchi"
description = "Tamagotchi P1 (Bandai 1996) core for extralife — clean-room Epson E0C6S46."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
# rlib for native tests + downstream Rust; cdylib for the wasm-pack build.
crate-type = ["cdylib", "rlib"]

[dependencies]
extralife-core.workspace = true
wasm-bindgen = "0.2"

[dev-dependencies]
# Golden-image harness only (tests). Never linked into the core or the WASM build.
image = { version = "0.25", default-features = false, features = ["png"] }
